--- a/sf-in-progress/www/assets/in-progress-index.html
+++ b/sf-in-progress/www/assets/in-progress-index.html
@@ -18,9 +18,8 @@
     <link href="css/in-progress.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
+    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -70,23 +69,48 @@
         </div>
         <!-- /.container -->
     </nav>
+    <main>
+        <section id = "slide-1" class = "homeSlide">
+            <div class="bcg">
+                <div class="hsContainer">
+                    <div class="hsContent">
+                        <h2>SF is going through an acute housing shortage</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-    <!-- Intro Header -->
-    <header id = "intro" class = "background-image">
+        <section id = "slide-2" class = "homeSlide">
+            <div class="bcg">
+                <div class="hsContainer">
+                    <div class="hsContent">
+                        <h2>SF is going through an acute housing shortage</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-            <div> <a class="page-scroll" href = "#one"><span class = "glyphicon glyphicon-chevron-down"></a></span></div>
-    </header><!-- intro -->
+        <section id = "slide-3" class = "homeSlide">
+            <div class="bcg">
+                <div class="hsContainer">
+                    <div class="hsContent">
+                        <h2>SF is going through an acute housing shortage</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-    <section id = "one" class = "background-image" >
-            <div> <a class="page-scroll" href = "#two"><span class = "glyphicon glyphicon-chevron-down"></a></span></div>
-    </section>
+        <section id = "slide-4" class = "homeSlide">
+            <div class="bcg">
+                <div class="hsContainer">
+                    <div class="hsContent">
+                        <h2>SF is going through an acute housing shortage</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-    <section id = "two"   class = "background-image" >
-            <div> <a class="page-scroll" href = "#three"><span class = "glyphicon glyphicon-chevron-down"></a></span></div>
-    </section>
-
-    <section id = "three" class = "background-image" >
-    </section>
+    </main>
 
     <div id = "projects">
         <div class="projects-wrapper">
@@ -185,22 +209,14 @@
 
 
 
-
-
-
-    <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
-    <!-- Plugin JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
 
-    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+    <script src = "js/skrollr.min.js"></script>
 
-    <!-- Custom Theme JavaScript -->
     <script src = "js/custom.js"></script>
 
 
