--- a/sf-in-progress/www/assets/in-progress-index.html
+++ b/sf-in-progress/www/assets/in-progress-index.html
@@ -20,6 +20,9 @@
     <!-- Custom Fonts -->
     <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <!-- <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700|Raleway:400,200,300|Open+Sans' rel='stylesheet' type='text/css'> -->
+
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800,300|Open+Sans+Condensed:300|Raleway:400,900,800' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -71,19 +74,44 @@
     </nav>
     <main>
         <section id = "slide-1" class = "homeSlide">
-            <div class="bcg">
-                <div class="hsContainer">
-                    <div class="hsContent">
-                        <h2>SF is going through an acute housing shortage</h2>
+            <div class="bcg"
+                >
+                <div class = "slide-overlay"
+                 data-bottom= "opacity: 1"
+                 data-top-bottom= "opacity: 0"
+                 data-anchor-target = "#slide-1"
+                >
+                    <div class="hsContainer">
+                        <div id ="project-title">
+                            <h1>SF IN</h1>
+                            <h1>PROGRESS</h1>
+                        </div>
+
+                       <!--  <div class="hsContent"
+                        data-center="bottom: 200px; opacity: 1"
+                        data-top="bottom: 1200px; opacity: 0"
+                        data-anchor-target="#slide-1 h2">
+                            <h2>SF is going through an acute housing shortage</h2>
+                        </div> -->
                     </div>
                 </div>
-            </div>
+            </div><!-- bcg -->
         </section>
 
         <section id = "slide-2" class = "homeSlide">
-            <div class="bcg">
+            <div class="bcg"
+                data-center="background-position: 50% 0px;"
+                data-top-bottom="background-position: 50% -100px;"
+                data-bottom-top="background-position: 50% 100px;"
+                data-anchor-target="#slide-2"
+                >
                 <div class="hsContainer">
-                    <div class="hsContent">
+                    <div class="hsContent"
+                    data-center="opacity: 1"
+                    data-center-top="opacity: 0"
+                    data--100-bottom="opacity: 0;"
+                    data-anchor-target="#slide-2"
+                    >
                         <h2>SF is going through an acute housing shortage</h2>
                     </div>
                 </div>
@@ -91,9 +119,20 @@
         </section>
 
         <section id = "slide-3" class = "homeSlide">
-            <div class="bcg">
+            <div class="bcg"
+            data-center="background-position: 50% 0px;"
+            data-top-bottom="background-position: 50% -100px;"
+            data-bottom-top="background-position: 50% 100px;"
+            data-anchor-target="#slide-3"
+            >
                 <div class="hsContainer">
-                    <div class="hsContent">
+                    <div class="hsContent"
+                    data--50-bottom="opacity: 0;"
+                    data--200-bottom="opacity: 1;"
+                    data-center="opacity: 1"
+                    data-200-top="opacity: 0"
+                    data-anchor-target="#slide-3 h2"
+                    >
                         <h2>SF is going through an acute housing shortage</h2>
                     </div>
                 </div>
@@ -101,9 +140,19 @@
         </section>
 
         <section id = "slide-4" class = "homeSlide">
-            <div class="bcg">
+            <div class="bcg"
+            data-center="background-position: 50% 0px;"
+            data-top-bottom="background-position: 50% -100px;"
+            data-bottom-top="background-position: 50% 100px;"
+            data-anchor-target="#slide-4"
+            >
                 <div class="hsContainer">
-                    <div class="hsContent">
+                    <div class="hsContent"
+                    data-bottom-top="opacity: 0"
+                    data-25p-top="opacity: 0"
+                    data-top="opacity: 1"
+                    data-anchor-target="#slide-4"
+                    >
                         <h2>SF is going through an acute housing shortage</h2>
                     </div>
                 </div>
