--- a/sf-in-progress/www/assets/in-progress-index.html
+++ b/sf-in-progress/www/assets/in-progress-index.html
@@ -74,26 +74,21 @@
     </nav>
     <main>
         <section id = "slide-1" class = "homeSlide">
-            <div class="bcg"
-                >
+            <div class="bcg">
                 <div class = "slide-overlay"
                  data-bottom= "opacity: 1"
                  data-top-bottom= "opacity: 0"
                  data-anchor-target = "#slide-1"
-                >
-                    <div class="hsContainer">
-                        <div id ="project-title">
-                            <h1>SF IN</h1>
-                            <h1>PROGRESS</h1>
-                        </div>
+                 >
+                   <div class="hsContent"
+                    data-center="opacity: 1"
+                    data-80-top="opacity: 0"
+                    data-anchor-target="#slide-1 h1"
+                   >
+                    <h1>SF IN PROGRESS</h1>
+                    <p>growing together</p>
+                   </div>
 
-                       <!--  <div class="hsContent"
-                        data-center="bottom: 200px; opacity: 1"
-                        data-top="bottom: 1200px; opacity: 0"
-                        data-anchor-target="#slide-1 h2">
-                            <h2>SF is going through an acute housing shortage</h2>
-                        </div> -->
-                    </div>
                 </div>
             </div><!-- bcg -->
         </section>
@@ -101,7 +96,7 @@
         <section id = "slide-2" class = "homeSlide">
             <div class="bcg"
                 data-center="background-position: 50% 0px;"
-                data-top-bottom="background-position: 50% -100px;"
+                data-top-bottom="background-position: 50% -200px;"
                 data-bottom-top="background-position: 50% 100px;"
                 data-anchor-target="#slide-2"
                 >
@@ -121,7 +116,7 @@
         <section id = "slide-3" class = "homeSlide">
             <div class="bcg"
             data-center="background-position: 50% 0px;"
-            data-top-bottom="background-position: 50% -100px;"
+            data-top-bottom="background-position: 50% -200px;"
             data-bottom-top="background-position: 50% 100px;"
             data-anchor-target="#slide-3"
             >
@@ -133,7 +128,11 @@
                     data-200-top="opacity: 0"
                     data-anchor-target="#slide-3 h2"
                     >
-                        <h2>SF is going through an acute housing shortage</h2>
+                        <h2>In 1940, the average price of a home in California was 20% higher than the US average. Today, it is 150% higher.
+
+                        Last year, San Francisco allowed 193 new homes to be built for every 1,000 new residents.
+                        </h2>
+
                     </div>
                 </div>
             </div>
@@ -142,114 +141,50 @@
         <section id = "slide-4" class = "homeSlide">
             <div class="bcg"
             data-center="background-position: 50% 0px;"
-            data-top-bottom="background-position: 50% -100px;"
+            data-top-bottom="background-position: 50% -200px;"
             data-bottom-top="background-position: 50% 100px;"
             data-anchor-target="#slide-4"
             >
                 <div class="hsContainer">
-                    <div class="hsContent"
-                    data-bottom-top="opacity: 0"
-                    data-25p-top="opacity: 0"
-                    data-top="opacity: 1"
-                    data-anchor-target="#slide-4"
-                    >
-                        <h2>SF is going through an acute housing shortage</h2>
+                    <div class="hsContent">
+                        <h2>The Bay Area is growing.
+                        And suburban sprawl costs the US $1 trillion a year.
+                        </h2>
                     </div>
                 </div>
             </div>
         </section>
 
+
+        <section id = "slide-5" class = "homeSlide">
+            <div class="bcg"
+            data-center="background-position: 50% 0px;"
+            data-top-bottom="background-position: 50% -200px;"
+            data-bottom-top="background-position: 50% 100px;"
+            data-anchor-target="#slide-5"
+            >
+                <div class="hsContainer">
+                    <div class="hsContent">
+                        <h2>
+                            We can no longer afford to build OUT, but need to build IN.
+
+We need to build smarter.
+Around transit hubs.
+And inside city limits.
+
+                        </h2>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+
+
     </main>
 
-    <div id = "projects">
-        <div class="projects-wrapper">
-            <div class="container-fluid">
-                <div class="row take3">
 
-                    <div class="col-md-4 house2">
-                            <div class = "img-container">
-                                <img src="img/housing_2.jpg" alt="house 2">
-                                <h4>Title of Project</h4>
-                            </div>
-                    </div><!-- col-md-4 house2 -->
-
-                    <div class="col-md-1">
-                    </div>
-
-                    <div class = "col-md-7">
-                        <div class="row collumn-wrapper">
-
-                            <div class="col-sm-6 first">
-                            </div>
-
-                            <div class="col-sm-6 second">
-
-                            </div>
-
-                        </div>
-                    </div>
-
-
-                </div><!-- row take3 -->
-            </div><!-- container-fluid -->
-
-            <div class="container-fluid">
-                <div class="row take3">
-
-                    <div class="col-md-4 house2">
-                            <div class = "img-container">
-                                <img src="img/housing_2.jpg" alt="house 2">
-                                <h4>Title of Project</h4>
-                            </div>
-                    </div><!-- col-md-4 house2 -->
-
-                    <div class="col-md-1">
-                    </div>
-
-                    <div class = "col-md-7">
-                        <div class="row collumn-wrapper">
-
-                            <div class="col-sm-6 first">
-
-                            </div>
-                            <div class="col-sm-6 second">
-                            </div>
-
-                        </div>
-                    </div>
-
-
-                </div><!-- row take3 -->
-            </div><!-- container-fluid -->
-
-            <div class="container-fluid">
-                <div class="row take3">
-
-                    <div class="col-md-4 house2">
-                            <div class = "img-container">
-                                <img src="img/housing_2.jpg" alt="house 2">
-                                <h4>Title of Project</h4>
-                            </div>
-                    </div><!-- col-md-4 house2 -->
-
-                    <div class="col-md-1">
-                    </div>
-
-                    <div class = "col-md-7">
-                        <div class="row collumn-wrapper">
-
-                            <div class="col-sm-6 first">
-
-                            </div>
-                            <div class="col-sm-6 second">
-                            </div>
-
-                        </div>
-                    </div>
-
-            </div>
-        </div><!-- projects-wrapper -->
-    </div><!---projects -->
 
     <div id="about">
 
