finialized slide3- adjusting slide3

--- a/sf-in-progress/www/assets/in-progress-index.html
+++ b/sf-in-progress/www/assets/in-progress-index.html
@@ -107,7 +107,7 @@
                     data--100-bottom="opacity: 0;"
                     data-anchor-target="#slide-2"
                     >
-                        <h2>SF is going through an acute housing shortage</h2>
+                        <h2>SF is going through an acute</h2><h2>housing shortage</h2>
                     </div>
                 </div>
             </div>
@@ -124,14 +124,18 @@
                     <div class="hsContent"
                     data--50-bottom="opacity: 0;"
                     data--200-bottom="opacity: 1;"
-                    data-center="opacity: 1"
-                    data-200-top="opacity: 0"
                     data-anchor-target="#slide-3 h2"
                     >
-                        <h2>In 1940, the average price of a home in California was 20% higher than the US average. Today, it is 150% higher.
 
-                        Last year, San Francisco allowed 193 new homes to be built for every 1,000 new residents.
-                        </h2>
+<!-- data-center="opacity: 1"
+data-200-top="opacity: 0" -->
+
+                        <div class = "contentContainer">
+                                <h2>In 1940, the average price</h2> <h2>of a home in California </h2> <h2>was 20% higher than the US average.</h2><h2>Today, it is 150% higher.</h2>
+                                <div class = "spacing"></div>
+                                <h2>Last year, San Francisco allowed</h2> <h2>193 new homes to be built</h2><h2>for every 1,000 new residents.
+                                </h2>
+                        </div>
 
                     </div>
                 </div>
