--- a/sf-in-progress/www/assets/in-progress-index.html
+++ b/sf-in-progress/www/assets/in-progress-index.html
@@ -102,11 +102,14 @@
                 >
                 <div class="hsContainer">
                     <div class="hsContent"
+                    data-bottom="opacity: 0"
                     data-center="opacity: 1"
-                    data-center-top="opacity: 0"
-                    data--100-bottom="opacity: 0;"
-                    data-anchor-target="#slide-2"
+                    data-206-top="opacity: 1"
+                    data-30-top="opacity: 0"
+                    data-anchor-target="#slide-2 h2"
                     >
+
+
                         <h2>SF is going through an acute</h2><h2>housing shortage</h2>
                     </div>
                 </div>
@@ -122,14 +125,12 @@
             >
                 <div class="hsContainer">
                     <div class="hsContent"
-                    data--50-bottom="opacity: 0;"
-                    data--200-bottom="opacity: 1;"
-                    data-anchor-target="#slide-3 h2"
+                    data-400-bottom="opacity: 0"
+                    data-center="opacity: 1"
+                    data-206-top="opacity: 1"
+                    data--800-top="opacity:0"
+                    data-anchor-target="#slide-3 .contentContainer"
                     >
-
-<!-- data-center="opacity: 1"
-data-200-top="opacity: 0" -->
-
                         <div class = "contentContainer">
                                 <h2>In 1940, the average price</h2> <h2>of a home in California </h2> <h2>was 20% higher than the US average.</h2><h2>Today, it is 150% higher.</h2>
                                 <div class = "spacing"></div>
