finished slide through slide-5

--- a/sf-in-progress/www/assets/in-progress-index.html
+++ b/sf-in-progress/www/assets/in-progress-index.html
@@ -74,7 +74,12 @@
     </nav>
     <main>
         <section id = "slide-1" class = "homeSlide">
-            <div class="bcg">
+            <div class="bcg"
+                data-center="background-position: 50% 0px;"
+                data-top-bottom="background-position: 50% -00px;"
+                data-bottom-top="background-position: 50% 100px;"
+                data-anchor-target="#slide-1"
+            >
                 <div class = "slide-overlay"
                  data-bottom= "opacity: 1"
                  data-top-bottom= "opacity: 0"
@@ -82,7 +87,7 @@
                  >
                    <div class="hsContent"
                     data-center="opacity: 1"
-                    data-80-top="opacity: 0"
+                    data--80-top="opacity: 0"
                     data-anchor-target="#slide-1 h1"
                    >
                     <h1>SF IN PROGRESS</h1>
@@ -96,7 +101,7 @@
         <section id = "slide-2" class = "homeSlide">
             <div class="bcg"
                 data-center="background-position: 50% 0px;"
-                data-top-bottom="background-position: 50% -200px;"
+                data-top-bottom="background-position: 50% -300px;"
                 data-bottom-top="background-position: 50% 100px;"
                 data-anchor-target="#slide-2"
                 >
@@ -105,12 +110,12 @@
                     data-bottom="opacity: 0"
                     data-center="opacity: 1"
                     data-206-top="opacity: 1"
-                    data-30-top="opacity: 0"
+                    data--100-top="opacity: 0"
                     data-anchor-target="#slide-2 h2"
                     >
 
 
-                        <h2>SF is going through an acute</h2><h2>housing shortage</h2>
+                        <h2>San Fransico is going through an acute</h2><h2>housing shortage</h2>
                     </div>
                 </div>
             </div>
@@ -119,7 +124,7 @@
         <section id = "slide-3" class = "homeSlide">
             <div class="bcg"
             data-center="background-position: 50% 0px;"
-            data-top-bottom="background-position: 50% -200px;"
+            data-top-bottom="background-position: 50% -300px;"
             data-bottom-top="background-position: 50% 100px;"
             data-anchor-target="#slide-3"
             >
@@ -127,8 +132,8 @@
                     <div class="hsContent"
                     data-400-bottom="opacity: 0"
                     data-center="opacity: 1"
-                    data-206-top="opacity: 1"
-                    data--800-top="opacity:0"
+                    data-406-top="opacity: 1"
+                    data--1000-top="opacity:0"
                     data-anchor-target="#slide-3 .contentContainer"
                     >
                         <div class = "contentContainer">
@@ -151,9 +156,17 @@
             data-anchor-target="#slide-4"
             >
                 <div class="hsContainer">
-                    <div class="hsContent">
-                        <h2>The Bay Area is growing.
-                        And suburban sprawl costs the US $1 trillion a year.
+
+                        <div class="hsContent"
+                        data-bottom="opacity: 0"
+                        data-center="opacity: 1"
+                        data-206-top="opacity: 1"
+                        data--100-top="opacity: 0"
+                        data-anchor-target="#slide-4 h2"
+                        >
+
+                        <h2>The Bay Area is growing</h2>
+                        <h2>And suburban sprawl costs the US $1 trillion a year.
                         </h2>
                     </div>
                 </div>
@@ -169,19 +182,28 @@
             data-anchor-target="#slide-5"
             >
                 <div class="hsContainer">
-                    <div class="hsContent">
-                        <h2>
-                            We can no longer afford to build OUT, but need to build IN.
+                    <div class="hsContent"
+                    data-400-bottom="opacity: 0"
+                    data-center="opacity: 1"
+                    data-406-top="opacity: 1"
+                    data--1000-top="opacity:0"
+                    data-anchor-target="#slide-5 .contentContainer"
+                    >
+                        <div class = "contentContainer">
+                            <h2>We can no longer afford to build <bold>OUT</bold></h2>
+                            <h2>but need to build <bold>IN</bold></h2>
+                            <div class = "space"></div>
+                            <h2>We need to build smarter.</h2>
+                            <h2>Around transit hubs.</h2>
+                            <h2>And inside city limits.</h2>
+                        </div>
 
-We need to build smarter.
-Around transit hubs.
-And inside city limits.
-
-                        </h2>
                     </div>
                 </div>
             </div>
         </section>
+
+
 
 
 
