finished all slides for mvp

--- a/sf-in-progress/www/assets/in-progress-index.html
+++ b/sf-in-progress/www/assets/in-progress-index.html
@@ -203,8 +203,23 @@
             </div>
         </section>
 
+        <section id = "slide-6" class = "homeSlide">
+            <div class="bcg">
+
+                <div class="hsContainer">
+                    <div class="hsContent"
+                     data--200-top = "opacity:0"
+                     data--500-top ="opacity:1 position: fixed; top: 206px; width: 100%; left: 0;"
+                     data-anchor-target= "#slide-5 .contentContainer"
+                    >
 
 
+
+                            <h2> Let your Voice be Heard</h2>
+                    </div>
+                </div><!-- hsContainer -->
+            </div><!-- bcg -->
+        </section>
 
 
 
@@ -213,7 +228,7 @@
 
 
 
-    <div id="about">
+    <div id="contact">
 
 
     </div>
