--- a/assets/index.html
+++ b/assets/index.html
@@ -54,16 +54,16 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#projects">Projects</a>
+                        <a class="page-scroll" href="#about">Projects</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#contact">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact-us">Contact Us</a>
+                        <a class="page-scroll" href="map">Contact Us</a>
                     </li>
                     <li>
-                       <a href="#"><div id= "project-submit">submit a project</div></a>
+                       <a href="#"><div id="submit-a-project">submit a project</div></a>
                     </li>
                 </ul>
             </div>
@@ -343,16 +343,12 @@
     </script>
 
 
-
-
-
-
     <script src="js/lib/jquery.js"></script>
     <script src="js/lib/bootstrap.min.js"></script>
     <script src="js/lib/jquery.easing.min.js"></script>
 
-      <script src = "js/lib/enquire.min.js"></script>
-      <script src='js/lib/scrollReveal.min.js'></script>
+    <script src="js/lib/enquire.min.js"></script>
+    <script src="js/lib/scrollReveal.min.js"></script>
 
     <script src = "js/lib/skrollr.min.js"></script>
     <script src = "js/lib/modernizr-2.7.1.min.js"></script>
